--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="label">COURSE SELECT</div>
     <select id="course-master-select" onchange="changeMasterCourse(this.value)">
       <option value="">-- ゴルフ場を選択 --</option>
-      <option value="残波ゴルフクラブ">【メイン】残波ゴルフクラブ</option>
+      <option value="残波ゴルフクラブ">残波ゴルフクラブ</option>
       <option value="沖縄カントリークラブ">沖縄カントリークラブ</option>
       <option value="パームヒルズゴルフリゾート">パームヒルズゴルフリゾート</option>
       <option value="那覇ゴルフ倶楽部(ショート)">那覇ゴルフ倶楽部(ショート)</option>
